初始框架，使用了远程数据库
使用了远程数据库

--- a/WebPage/JavaEE卑微的开始/09项目实战开发/register-login/src/main/resources/database.properties
+++ b/WebPage/JavaEE卑微的开始/09项目实战开发/register-login/src/main/resources/database.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/canteensystem?useSSL=true&amp;useUnicode=true&amp;characterEncoding=utf8&serverTimezone=GMT%2B8
-jdbc.username=root
-jdbc.password=qiu123
+jdbc.url=jdbc:mysql://localhost:3306/wheatserver.top?useSSL=true&useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
+jdbc.username=javaee
+jdbc.password=123456
