--- a/WebPage/JavaEE卑微的开始/09项目实战开发/register-login/pom.xml
+++ b/WebPage/JavaEE卑微的开始/09项目实战开发/register-login/pom.xml
@@ -18,6 +18,13 @@
     </properties>
 
     <dependencies>
+        <!-- 数据库连接池 -->
+        <dependency>
+            <groupId>com.mchange</groupId>
+            <artifactId>c3p0</artifactId>
+            <version>0.9.5.2</version>
+        </dependency>
+
         <!--Servlet - JSP -->
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -48,11 +55,16 @@
             <version>8.0.28</version>
         </dependency>
 
-        <!--mybatis-->
+        <!--Mybatis-->
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
-            <version>3.5.6</version>
+            <version>3.5.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis-spring</artifactId>
+            <version>2.0.2</version>
         </dependency>
 
         <!--junit-->
