--- a/WebPage/JavaEE卑微的开始/09项目实战开发/register-login/src/main/resources/database.properties
+++ b/WebPage/JavaEE卑微的开始/09项目实战开发/register-login/src/main/resources/database.properties
@@ -1,4 +1,5 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/wheatserver.top?useSSL=true&useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
+jdbc.url=jdbc:mysql://wheatserver.top:3306/canteensystem_qiu?useSSL=true&useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
 jdbc.username=javaee
 jdbc.password=123456
+
